# tf2-corp-platform

./: .env  .env.override  .gitignore  .gitmodules  .licenserc.json  .yamlignore  CODEOWNERS  Makefile  README.md  bake-print.txt  build-audit-report.md  docker-bake.hcl  docker-compose-tests.yml  docker-compose.ai-dev.yml  docker-compose.minimal.yml  docker-compose.yml  docker-gen-proto.sh  frontend-proxy-guide.md  package-lock.json
src/ai-common/: pyproject.toml
src/ai-common/techx_ai_common/: __init__.py  bedrock.py  contracts.py  grounding.py  guardrails.py  rate_limiter.py  retrieval.py
src/ai-common/techx_ai_common/proto/: __init__.py  demo_pb2.py  demo_pb2_grpc.py
src/aio/: .dockerignore  .env  .env.example  .env.live.example  .gitignore  Dockerfile  Infra.md  README.md  các API cần kết nối.md  environment.yml  pyproject.toml  requirements.in  requirements.txt
src/aio/aiops/: __init__.py  cli.py  deduplication.py  main.py  models.py  serve.py
src/aio/aiops/anomaly/: __init__.py  events.py  stats.py  v001.py
src/aio/aiops/api/: __init__.py  app.py
src/aio/aiops/collectors/: __init__.py  base.py  prometheus.py  static.py
src/aio/aiops/config/: __init__.py  hyperparameters.py  runtime.py  settings.py
src/aio/aiops/core/: __init__.py
src/aio/aiops/correlation/: __init__.py  correlator.py
src/aio/aiops/detectors/: __init__.py  base.py  dependency.py  engine.py  no_data.py  threshold.py
src/aio/aiops/e2e/: __init__.py  prometheus.py
src/aio/aiops/enrichment/: __init__.py  enricher.py
src/aio/aiops/evidence/: __init__.py
src/aio/aiops/executor/: __init__.py  app.py
src/aio/aiops/features/: __init__.py  builder.py
src/aio/aiops/incidents/: __init__.py  fingerprint.py  manager.py
src/aio/aiops/integrations/: __init__.py  aie.py  cost.py  http.py  jaeger.py  kubernetes.py  live_executor.py  notification.py  opensearch.py  prometheus.py
src/aio/aiops/normalization/: __init__.py  normalizer.py
src/aio/aiops/notifications/: __init__.py  builder.py
src/aio/aiops/observability/: __init__.py  logging.py  metrics.py
src/aio/aiops/pipeline/: __init__.py  analysis.py  runtime.py
src/aio/aiops/qualification/: __init__.py  gate.py
src/aio/aiops/rca/: __init__.py  engine.py  graph.py  robust_score.py
src/aio/aiops/remediation/: __init__.py  audit.py  catalog.py  closed_loop.py  decision.py  features.py  history.py  policy.py  retrieval.py
src/aio/aiops/replay/: __init__.py  evaluator.py
src/aio/aiops/schemas/: __init__.py  api.py  base.py  config.py  domain.py  prometheus.py
src/aio/aiops/shared/: __init__.py  features.py  series.py  tail.py
src/aio/aiops/storage/: __init__.py  memory.py  sqlite.py
src/aio/aiops/telemetry/: __init__.py
src/aio/aiops/topology/: __init__.py  graph.py
src/aio/aiops/verification/: __init__.py  engine.py
src/aio/blocks/: 1. Thu thập hoặc nhận tín hiệu.md  11. Verification.md  12. SQLite WAL PVC.md  5. Detector engine.md  9. Deduplicate, attach runbook, notify.md
src/aio/blocks/term/: Grafana hard-rule webhook.md
src/aio/config/: README.md  actions.json  drain3.ini  hyperparameters.json  incidents_history.json  prometheus_e2e.json  prometheus_queries.json  runtime.burn-rate-only.json  runtime.json  signal_normalization_schema.json  signal_qualification_schema.json
src/aio/config/detectors/: anomalies.yaml  flag_signatures.yaml  kafka.yaml
src/aio/config/environments/: tf2.yaml
src/aio/config/notification/: routes.yaml
src/aio/config/policies/: actions.yaml
src/aio/config/queries/: checkout.yaml  kafka.yaml  llm.yaml  official_slos.yaml  postgresql.yaml  runtime.yaml
src/aio/config/runbooks/: index.yaml
src/aio/config/schemas/: detector.schema.json  policy.schema.json  route.schema.json  runbook.schema.json  runbook_index.schema.json  (+2 more)
src/aio/dataset/: .gitignore  README.md  label.json
src/aio/docs/: Infra.md  Pipeline RCA cơ bản.md  api_schema_audit.md  block_io_schema.md  các API cần kết nối.md  e2e-run-20260716T165717Z.md  live_endpoints.md  prometheus-query-design.md  remediation_evaluation.md  test_environment_note.md
src/aio/evaluate/: README.md  current_pipeline.py  current_pipeline_report.json  e2e_pipeline.py  e2e_pipeline_report.json  generate_incident_labels.py  incident_labels.csv  incident_labels.py  labels.example.json  naive_threshold_baseline.py  service_change_score_baseline.py
src/aio/raws/: architect.md  implement_plan.md
src/aio/runbooks/: RB-CART-ERROR-RATE.md  RB-CHECKOUT-DEPENDENCY.md  RB-CHECKOUT-LATENCY.md  RB-CHECKOUT-SLO.md  RB-DB-SATURATION.md  RB-MONITORING-LOSS.md  RB-PRODUCT-CATALOG-CPU.md  RB-SERVICE-ERROR-RATE.md  RB-SERVICE-LATENCY.md  RB-SERVICE-RCA.md  RB-SERVICE-RESOURCE-SATURATION.md  service_runbook_map.json
src/aio/scripts/: __init__.py  check_runtime_imports.py  discover_signals.py  export_evidence.py  inspect_artifact.py  port_forward.ps1  port_forward.sh  replay_scenario.py  run_prometheus_e2e.py  validate_config.py
src/aio/tests/: __init__.py  helpers.py  smoke_test_live.py  test_api_and_schemas.py  test_cli.py  test_config_validation.py  test_core_pipeline.py  test_e2e_pipeline_regression.py  test_enrichment.py  test_evaluation.py  test_incident_labels.py  test_integrations.py  test_mandate_runtime.py  test_prod_simulation.py  test_prometheus_collector.py  test_prometheus_e2e.py  test_qualification_gate.py  test_runbook_validation.py  test_runtime_config.py  test_runtime_pipeline.py  test_scaffold.py  test_serve.py  test_service_change_score_baseline.py  test_settings.py  test_sqlite_storage.py  test_topology_graph.py  test_v001_anomaly_rca.py
src/audit-alert-parser/: README.md  pyproject.toml
src/audit-alert-parser/audit_alert_parser/: __init__.py  allowlist.py  cloudtrail.py  eks_audit.py  evidence.py  formatter.py  handler.py  normalizer.py  redaction.py  rules.py  ttd.py
src/audit-alert-parser/config/: allowlist.yaml  rules.yaml
src/audit-alert-parser/tests/: test_allowlist.py  test_evidence.py  test_formatter.py  test_handler.py  test_mentor_usecases_integration.py  test_normalization.py  test_redaction.py  test_rules.py
(+546 files in other folders)
