# Copyright The OpenTelemetry Authors
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "techx-ai-common"
version = "0.1.0"
description = "Shared AI safety, grounding, and protobuf contracts for TechX services"
requires-python = ">=3.12"
dependencies = [
  "grpcio==1.71.0",
  "instructor==1.15.4",
  # llm-guard 0.3.16 and presidio-anonymizer 2.2.363 are installed --no-deps
  # by CI/images because their upstream metadata caps cryptography below the
  # remediated release. Keep their runtime dependencies explicit here.
  "bc-detect-secrets==1.5.43",
  "faker>=37,<38",
  "fuzzysearch>=0.7,<0.9",
  "json-repair==0.44.1",
  "nltk>=3.9.1,<4",
  "numpy==1.26.4",
  "openai==2.14.0",
  "presidio-analyzer==2.2.363",
  "pydantic==2.12.5",
  "spacy==3.8.13",
  "regex==2024.11.6",
  "structlog>=24",
  "tiktoken>=0.9,<1.0",
  # Trivy HIGH/CRITICAL floors (product-reviews / shopping-copilot images)
  "torch==2.6.0",
  "transformers==4.51.3",
  "cryptography==48.0.1",
  "en-core-web-lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl",
]

[tool.setuptools.packages.find]
include = ["techx_ai_common*"]

# Change trail: @hoangvu186 - 2026-07-20 - Resolve llm-guard metadata conflicts without weakening Trivy gates
