[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tf2-aiops"
version = "0.1.0"
description = "TF2 AIO4 AIOps runtime"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "Apache-2.0"
authors = [{ name = "AIO4 AIOps Team" }]
dependencies = [
  "aiosqlite>=0.20,<1",
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "kubernetes>=32,<35",
  "opentelemetry-api>=1.30,<2",
  "opentelemetry-exporter-otlp-proto-grpc>=1.30,<2",
  "opentelemetry-sdk>=1.30,<2",
  "prometheus-client>=0.21,<1",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.7,<3",
  "PyYAML>=6,<7",
  "uvicorn>=0.34,<1",
]

[project.scripts]
aiops-api = "aiops.main:run"

[dependency-groups]
dev = [
  "mypy>=1.15,<2",
  "pip>=25,<27",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<2",
  "pytest-cov>=6,<8",
  "ruff>=0.11,<1",
  "types-PyYAML>=6.0.12,<7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["aiops*"]
exclude = ["tests*", "scripts*", "config*", "docs*", "runbooks*"]

[tool.ruff]
target-version = "py311"
line-length = 140

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
exclude = ["tests/"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.uv]
package = true
