[build-system]
requires = ["setuptools>=80,<81"]
build-backend = "setuptools.build_meta"

[project]
name = "tf2-aiops-runtime"
version = "0.1.0"
description = "TF2 Phase 3 AIOps detection and incident-response runtime"
requires-python = ">=3.11,<3.13"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.in"] }

[tool.setuptools.packages.find]
include = ["aiops*"]
