[project]
name = "techx-audit-alert-parser"
version = "0.1.0"
description = "Mandate 11 audit alert parser skeleton for CloudTrail and EKS audit events"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["audit_alert_parser*"]
exclude = ["config*", "tests*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
